<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_meme_list">

    <fragment
        android:id="@+id/navigation_meme_info"
        android:name="com.jalexy.meme.info.presentation.MemeInfoFragment"
        android:label="@string/title_meme_info"
        tools:layout="@layout/fragment_meme_info" >
        <argument
            android:name="meme"
            app:argType="com.jalexy.meme.main.domain.models.Meme" />
    </fragment>

    <fragment
        android:id="@+id/navigation_meme_list"
        android:name="com.jalexy.meme.memelist.presentation.MemeListFragment"
        android:label="@string/title_meme_list"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_meme_list_to_navigation_info"
            app:destination="@id/navigation_meme_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.jalexy.meme.favorite.presentation.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_home"
            app:destination="@id/navigation_meme_info" />
    </fragment>

</navigation>